# data-ptr-swap

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  client.vcxproj  functions.cpp  main.cpp
client/src/: functions.h
driver/: CMakeLists.txt  Common.h  Physmem.cpp  Physmem.h  core.cpp  data_ptr.sln  driver.cpp  hook.cpp  shared.cpp  test_driver.vcxproj  test_driver.vcxproj.filters  utils.cpp
driver/includes/: CreateDriver.h  definitions.h  imports.h  utils.cpp  utils.h
driver/sharedMemory/: Common.h  core.h  shared.h
driver/src/: hook.h
